tests/snapshots/examples_fixtures/type_system__failing__200_effect_row_absent_ordering_linked_violation_e421.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/200_effect_row_absent_ordering_linked_violation_e421.flx
== compile ==
failed (compile)
== diagnostics ==
error[E421]: Effect Requirement Mismatch

I cannot subtract effect `Console` from this effect row.

  examples/type_system/failing/200_effect_row_absent_ordering_linked_violation_e421.flx:46:13
   |
46 |     let _ = needs_linked_absence(row_var_worker, console_worker)
   |             ^^^^^^^^^^^^^^^^^^^^
   |             -------------------- this call violates an effect-row subtraction constraint

   |             -------------------- this call to `needs_linked_absence` creates the effect obligation

Note:
  requested subtraction: Console
  constraint source: effect-row checking for `needs_linked_absence`

Help:
  Handle or include this effect before subtracting it from an effect row.
== stdout ==
<not executed>
